{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 13,
  "lineage": "73134882-e707-8002-26c4-111b51e4aade",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbd1fab510bb5c3",
            "arn": "arn:aws:ec2:ap-south-2:345667997177:elastic-ip/eipalloc-02cbd1fab510bb5c3",
            "domain": "vpc",
            "id": "eipalloc-02cbd1fab510bb5c3",
            "network_border_group": "ap-south-2",
            "public_dns": "ec2-98-130-79-251.ap-south-2.compute.amazonaws.com",
            "public_ip": "98.130.79.251",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01cfb0266fc955899",
            "arn": "arn:aws:ec2:ap-south-2:345667997177:instance/i-025f99722a114fca7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025f99722a114fca7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0121f23db0d922b31"
              }
            ],
            "primary_network_interface_id": "eni-0121f23db0d922b31",
            "private_dns": "ip-10-0-1-245.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-16-112-61-144.ap-south-2.compute.amazonaws.com",
            "public_ip": "16.112.61.144",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad7cd385516878f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f793069c1ac71b78"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068e1effce57f1d8e",
            "tags": {
              "Name": "Public-EC2"
            },
            "tags_all": {
              "Name": "Public-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f793069c1ac71b78"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345667997177",
            "id": "i-025f99722a114fca7",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:345667997177:internet-gateway/igw-065db612079df2b10",
            "id": "igw-065db612079df2b10",
            "owner_id": "345667997177",
            "region": "ap-south-2",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-05c9a487823ae16b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbd1fab510bb5c3",
            "association_id": "eipassoc-04df20ae621214b03",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09b9beae081ae0b2b",
            "network_interface_id": "eni-072f236785c0bbd44",
            "private_ip": "10.0.1.61",
            "public_ip": "98.130.79.251",
            "region": "ap-south-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068e1effce57f1d8e",
            "tags": {
              "Name": "My-NAT"
            },
            "tags_all": {
              "Name": "My-NAT"
            },
            "vpc_id": "vpc-05c9a487823ae16b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:345667997177:route-table/rtb-099060d2b5cdeec84",
            "id": "rtb-099060d2b5cdeec84",
            "owner_id": "345667997177",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09b9beae081ae0b2b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c9a487823ae16b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345667997177",
            "id": "rtb-099060d2b5cdeec84",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:345667997177:route-table/rtb-0ac7cbbbb5a7b751d",
            "id": "rtb-0ac7cbbbb5a7b751d",
            "owner_id": "345667997177",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065db612079df2b10",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c9a487823ae16b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345667997177",
            "id": "rtb-0ac7cbbbb5a7b751d",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081de0ed359052017",
            "region": "ap-south-2",
            "route_table_id": "rtb-099060d2b5cdeec84",
            "subnet_id": "subnet-02c0c24478bd409ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01570e2ecb2013c42",
            "region": "ap-south-2",
            "route_table_id": "rtb-0ac7cbbbb5a7b751d",
            "subnet_id": "subnet-068e1effce57f1d8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:345667997177:security-group/sg-0f793069c1ac71b78",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f793069c1ac71b78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260217104655679200000001",
            "name_prefix": "terraform-",
            "owner_id": "345667997177",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c9a487823ae16b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345667997177",
            "id": "sg-0f793069c1ac71b78",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:345667997177:subnet/subnet-02c0c24478bd409ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c0c24478bd409ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345667997177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-05c9a487823ae16b1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345667997177",
            "id": "subnet-02c0c24478bd409ed",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:345667997177:subnet/subnet-068e1effce57f1d8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068e1effce57f1d8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345667997177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-05c9a487823ae16b1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345667997177",
            "id": "subnet-068e1effce57f1d8e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:345667997177:vpc/vpc-05c9a487823ae16b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad054ca7ef569a2e",
            "default_route_table_id": "rtb-08bc8684b346685f2",
            "default_security_group_id": "sg-0c70d7fa03e4a772d",
            "dhcp_options_id": "dopt-08ba6a8aab9253a1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c9a487823ae16b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bc8684b346685f2",
            "owner_id": "345667997177",
            "region": "ap-south-2",
            "tags": {
              "Name": "My-VPC"
            },
            "tags_all": {
              "Name": "My-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "345667997177",
            "id": "vpc-05c9a487823ae16b1",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}